--- a/index.html
+++ b/index.html
@@ -55,12 +55,6 @@
                   <div class="main-menu d-none d-lg-block">
                     <nav>
                       <ul id="navigation">
-                        <li><a href="index.html">home</a></li>
-                        <li><a href="Works.html">Works</a></li>
-                        <li><a href="Services.html">Services</a></li>
-                        <li><a href="about.html">about</a></li>
-
-                        <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </nav>
                   </div>
@@ -68,7 +62,7 @@
                 <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                   <div class="Appointment">
                     <div class="book_btn d-none d-lg-block">
-                      <a href="#">Let’s Talk</a>
+                      <a href="/contact">Let’s Talk</a>
                     </div>
                   </div>
                 </div>
@@ -94,7 +88,6 @@
                   Hi there, I am Muhammad Israr <br />
                   <span>Backend Developer</span>
                 </h3>
-                <a class="boxed-btn3-line" href="#">View Works</a>
               </div>
             </div>
             <div class="my_img d-none d-lg-block">
@@ -112,7 +105,7 @@
           <div class="col-xl-10">
             <div class="download_text">
               <h3>
-                Dynamic and innovative Backend Developer with 3 years of
+                Dynamic and innovative Backend Developer with 3+ years of
                 progressive experience in web development and backend
                 programming.
               </h3>
@@ -134,7 +127,7 @@
                 abreast of emerging technologies to drive continuous improvement
                 and stay at the forefront of the industry.
               </p>
-              <a href="#" class="boxed-btn3-line">Download CV</a>
+              <a href="muhammd-israr-baloch-cv.pdf" download="Muhammad Israr's CV" class="boxed-btn3-line">Download CV</a>
             </div>
           </div>
           <div class="col-lg-5 offset-lg-1 col-md-6">
@@ -267,23 +260,23 @@
               <div class="col-xl-6 col-lg-6 col-md-6">
                 <div class="single_gallery">
                   <div class="thumb">
-                    <img src="img/gallery/1.png" alt="" />
+                    <img src="img/gallery/brandsrope.png" alt="" />
                   </div>
                   <div class="gallery_heading">
-                    <span>Mobile App</span>
-                    <a href="works_details.html"
-                      ><h4>Colorlib App Project</h4></a
+                    <span>Web Application</span>
+                    <a href="https://brandsrope.com"
+                      ><h4>BrandsRope | E-commerce</h4></a
                     >
                   </div>
                 </div>
                 <div class="single_gallery">
                   <div class="thumb">
-                    <img src="img/gallery/2.png" alt="" />
+                    <img src="img/gallery/rainbow.png" alt="" />
                   </div>
                   <div class="gallery_heading">
-                    <span>Mobile App</span>
-                    <a href="works_details.html"
-                      ><h4>Colorlib App Project</h4></a
+                    <span>Web Application</span>
+                    <a href="https://rainbowcarpooling.com"
+                      ><h4>Rainbow Carpooling | Transportation for Kids</h4></a
                     >
                   </div>
                 </div>
@@ -291,23 +284,23 @@
               <div class="col-xl-6 col-lg-6 col-md-6">
                 <div class="single_gallery">
                   <div class="thumb">
-                    <img src="img/gallery/3.png" alt="" />
+                    <img src="img/gallery/shortneer.png" alt="" />
                   </div>
                   <div class="gallery_heading">
-                    <span>Mobile App</span>
-                    <a href="works_details.html"
-                      ><h4>Colorlib App Project</h4></a
+                    <span>Web Application</span>
+                    <a href="https://shortneer.com"
+                      ><h4>Shortneer | URL Shortening Service</h4></a
                     >
                   </div>
                 </div>
                 <div class="single_gallery">
                   <div class="thumb">
-                    <img src="img/gallery/4.png" alt="" />
+                    <img src="img/gallery/gsc.png" alt="" />
                   </div>
                   <div class="gallery_heading">
-                    <span>Mobile App</span>
-                    <a href="works_details.html"
-                      ><h4>Colorlib App Project</h4></a
+                    <span>Web Application</span>
+                    <a href="https://gsc.devitcoderz.com"
+                      ><h4>Canadian Gold Stocks | Metal Trading Platform</h4></a
                     >
                   </div>
                 </div>
