--- a/works.html
+++ b/works.html
@@ -52,13 +52,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>
-                                            <li><a href="Works.html">Works</a></li>
-                                            <li><a href="Services.html">Services</a></li>
                                             
-                                            <li><a href="about.html">about</a></li>
-                                            
-                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -104,7 +98,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="single_gallery">
                                 <div class="thumb">
-                                    <img src="img/gallery/1.png" alt="">
+                                    <img src="img/gallery/gsc.png" alt="">
                                 </div>
                                 <div class="gallery_heading">
                                     <span>Mobile App</span>
